// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REQUEST_TOKENIZATION: Disable button, Show form 1`] = `
<div
  className="Tokenization"
>
  <Button
    active={false}
    disabled={true}
    onClick={[Function]}
    variant="primary"
  >
    Create token
  </Button>
  <CreateTokenizationRequest
    onCancel={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`REQUEST_TOKENIZATION_DONE: Enable button, Show message 1`] = `
<div
  className="Tokenization"
>
  <Button
    active={false}
    disabled={false}
    onClick={[Function]}
    variant="primary"
  >
    Create token
  </Button>
</div>
`;

exports[`START: Enable button 1`] = `
<div
  className="Tokenization"
>
  <Button
    active={false}
    disabled={false}
    onClick={[Function]}
    variant="primary"
  >
    Create token
  </Button>
</div>
`;
